# star_wars

./: .gitignore  README.md  api-entrypoint.sh  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
star_wars/: Dockerfile  api-entrypoint.sh
star_wars/common/: serializers.py  services.py  views.py
star_wars/core/: models.py
star_wars/core/management/commands/: load_data.py  wait_for_db.py
star_wars/movies/: constants.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
star_wars/movies/fixtures/: movies.json
star_wars/movies/migrations/: 0001_initial.py  0002_auto_20230329_0552.py
star_wars/planets/: constants.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
star_wars/planets/fixtures/: planets.json
star_wars/planets/migrations/: 0001_initial.py  0002_auto_20230329_0552.py
star_wars/star_wars/: settings.py  urls.py
star_wars/users/: models.py  services.py
star_wars/users/fixtures/: users.json  users.yaml
star_wars/users/migrations/: 0001_initial.py  0002_auto_20230329_0552.py
